--- a/app/src/main/res/layout/fragment_examen.xml
+++ b/app/src/main/res/layout/fragment_examen.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    
-    <data>
+
+<!--    <data>
         <variable
             name="game"
             type="com.programoviles.sweetmusic.ExamenFragment" />
-    </data>
-    
+    </data>-->
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,16 +20,17 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:src="@drawable/aug"
-            android:visibility="invisible"/>
+            android:visibility="invisible"
+            />
 
         <TextView
             android:id="@+id/questionTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="@tools:sample/full_names"
-            android:text="@{game.currentQuestion.text}"
             android:layout_gravity="center"
             />
+<!--             android:text="@{game.currentQuestion.text}"-->
 
         <ScrollView
             android:layout_width="match_parent"
@@ -45,26 +46,27 @@
                     android:id="@+id/option1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{game.answers[0]}"
                     />
+                <!--                    android:text="@{game.answers[0]}"-->
+
                 <RadioButton
                     android:id="@+id/option2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{game.answers[1]}"
                     />
+                <!--                    android:text="@{game.answers[0]}"-->
                 <RadioButton
                     android:id="@+id/option3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{game.answers[2]}"
                     />
+                <!--                    android:text="@{game.answers[0]}"-->
                 <RadioButton
                     android:id="@+id/option4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@{game.answers[3]}"
                     />
+                <!--                    android:text="@{game.answers[0]}"-->
             </RadioGroup>
         </ScrollView>
 
