--- a/app/src/main/res/layout/fragment_passed_exam.xml
+++ b/app/src/main/res/layout/fragment_passed_exam.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EFEEF1"
     tools:context=".PassedExamFragment">
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="211dp"
         android:layout_height="211dp"
-        android:src="@drawable/aumentada7"
+        android:layout_marginTop="28dp"
+        android:src="@drawable/happymusicnote"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,8 +21,12 @@
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="40dp"
-        android:text="Felicidades lograste pasar el examen!!"
+        android:layout_marginEnd="16dp"
+        android:text="Felicidades pasaste el examen!!"
+        android:textAlignment="center"
+        android:textColor="#050404"
         android:textColorLink="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +39,9 @@
         android:layout_width="141dp"
         android:layout_height="56dp"
         android:layout_marginTop="44dp"
-        android:text="Button"
+        android:background="@color/colorPrimary"
+        android:text="Regresar al menu principal"
+        android:textColor="#EFE5E5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
