--- a/app/src/main/res/layout/fragment_bloque_leccion.xml
+++ b/app/src/main/res/layout/fragment_bloque_leccion.xml
@@ -13,6 +13,7 @@
         android:id="@+id/recyclerViewLeccion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="58dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
+        android:layout_marginTop="60dp"
         app:itemIconTint="#FFFFFF"
         app:itemTextColor="#FFFFFF"
         app:labelVisibilityMode="labeled"
