--- a/app/src/main/res/layout/textview.xml
+++ b/app/src/main/res/layout/textview.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <TextView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/tvTest"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true">
-    </TextView>
+<TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tvTest"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:textSize="25dp"
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp"
+    tools:text="@tools:sample/first_names">
+</TextView>
