--- a/app/src/main/res/layout/fragment_examen.xml
+++ b/app/src/main/res/layout/fragment_examen.xml
@@ -69,7 +69,7 @@
             android:id="@+id/answerButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Send"
+            android:text="Siguiente"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
